FIX. Donate bottom alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -303,7 +303,7 @@ ul.dropdown-menu > li.sub-dropdown:hover > ul.sub-dropdown-group {
     border: none;
     color: #fff;
     height: 40px;
-    width: 110px;
+    width: 103px;
     border-radius: 5px;
     margin: 25px 5px 0 5px;
     font-family: "NotoSans-Bold", sans-serif;
